<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    android:rowCount="3" >
    
       <TextView
            android:id="@+id/labelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:text="@string/identificador"
            android:layout_row="0"
            android:layout_column="0"
        />
    
   <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
             android:layout_row="0"
        />
   <TextView
            android:id="@+id/labelModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:text="@string/modelo"
             android:layout_row="1"
              android:layout_column="0"
        />
     <TextView
            android:id="@+id/modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:layout_row="1"
            android:layout_column="1"
        />
     <TextView
            android:id="@+id/labelDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:text="@string/descricao"
            android:layout_row="1"
       />
        <TextView
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
     	    android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:layout_row="1"
        />
        
        <TextView
            android:id="@+id/labelMotivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:text="@string/motivo"
            android:layout_row="2"
            android:layout_column="0"
            android:visibility="gone"
       />
        <TextView
            android:id="@+id/motivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
     	    android:layout_marginStart="5sp"
            android:gravity="center_vertical"
            android:textColor="#FF000000"
            android:layout_row="2"
            android:layout_column="1"
            android:visibility="gone"
            
        />
        

</GridLayout>
